[package]
name = "pdircomp"
version = "0.1.0"
authors = ["Christoph Doblander <chris@degree.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
argparse = "0.2.2"
ring = "0.16.11"
data-encoding = "2.2.0"