[package]
name = "pdircomp"
version = "0.1.0"
authors = ["Christoph Doblander <chris@degree.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
clap = "2.33"
ring = "0.16"
data-encoding = "2.3"
rand = "0.7"
indicatif = "0.15"
num_cpus = "1.13"